# rtmx

./: .env  Cargo.toml  diesel.toml
.github/workflows/: rust.yml
db/local/: docker-compose.yml
db/migrations/2024-01-03-141816_add_messages_table/: down.sql  up.sql
src/: api.rs  main.rs  model.rs  routes.rs
src/api/: conversations.rs  login.rs
src/api/conversations/: direct.rs  list.rs
src/model/: schema.rs
src/templates/: generated.rs
sse/: Cargo.toml
sse/src/: cpu_load.rs  loading.rs  lorem_ipsum.rs  main.rs
static/: style.css
templates/: auto-refresh-messages.html  conversation-items.html  conversation.html  index.html  index.rs.html  load-more.html  login.html  message.html  messages.html
templates/conversations/: index.html
templates/conversations/direct/: conversation-details.html  hidden-refresh.html  individual-message.html  lazy-loaded.html  load-more.html  search-results.html
templates/conversations/list/: conversation-dynamic-bits.html
