[package]
name = "rustmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.2"
axum-extra = { version = "0.9.1", features = ["cookie"] }
axum-macros = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["mysql"] }
diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
urlencoding = "2.1.3"
